add tooltip, all processing alert

--- a/SafeClient/NLog.config
+++ b/SafeClient/NLog.config
@@ -12,16 +12,16 @@
             archiveAboveSize="10240000"
             archiveEvery="Day"/>
 
-    <target name="console" xsi:type="RichTextBox"
+    <!--target name="console" xsi:type="RichTextBox"
             layout="${longdate} [${threadid}] ${level:uppercase=true} ${logger} - ${message}${exception:format=ToString}"
             width="2048"
             height="800"
             allowAccessoryFormCreation="true"
-    />
+    /-->
   </targets>
 
   <rules>
     <logger name="*" minlevel="Debug" writeTo="file" />
-    <logger name="*" minlevel="Debug" writeTo="console" />
+    <!--logger name="*" minlevel="Debug" writeTo="console" /-->
   </rules>
 </nlog>
