--- a/SafeClient/App.config
+++ b/SafeClient/App.config
@@ -9,6 +9,7 @@
   </System.Windows.Forms.ApplicationConfigurationSection>
   <appSettings>
     <add key="server.url" value="http://localhost:5000" />
+    <!--add key="server.url" value="http://192.168.1.20:80" /-->
     <add key="netsdk.dir" value="netsdk" />
     <add key="ffmpeg.dir" value="ffmpeg" />
     <add key="nvr.connect.time.ms" value="5000" />
