migrate to DAHUA NVR

--- a/SafeClient/App.config
+++ b/SafeClient/App.config
@@ -8,15 +8,14 @@
     <add key="EnableWindowsFormsHighDpiAutoResizing" value="false" />
   </System.Windows.Forms.ApplicationConfigurationSection>
   <appSettings>
-    <!--add key="server.url" value="http://localhost:5000" /-->
+    <!-- <add key="server.url" value="http://localhost:5000" /> -->
     <add key="server.url" value="http://192.168.1.20:80" />
-    <add key="netsdk.dir" value="netsdk" />
-    <add key="ffmpeg.dir" value="ffmpeg" />
+    <add key="netsdk.dir" value="dhnetsdk" />
     <add key="nvr.connect.time.ms" value="5000" />
     <add key="nvr.keeplife.time.sec" value="10" />
     <add key="nvr.detect.time.sec" value="30" />
-    <add key="alert.before.sec" value="43200" />
-    <add key="alert.after.sec" value="43200" />
+    <add key="alert.before.sec" value="70" />
+    <add key="alert.after.sec" value="70" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
