--- a/SafeClient/packages.config
+++ b/SafeClient/packages.config
@@ -9,5 +9,6 @@
   <package id="NLog.Config" version="4.7.2" targetFramework="net40" />
   <package id="NLog.Schema" version="4.7.2" targetFramework="net40" />
   <package id="NLog.Windows.Forms" version="4.3.0" targetFramework="net40" />
+  <package id="Onvif.IP.Camera.Viewer" version="11.2.0" targetFramework="net40" />
   <package id="Spring.Rest" version="1.1.1" targetFramework="net40" />
 </packages>
