--- a/SafeClient/App.config
+++ b/SafeClient/App.config
@@ -16,18 +16,20 @@
     <add key="nvr.detect.time.sec" value="30" />
     <add key="alert.before.sec" value="70" />
     <add key="alert.after.sec" value="70" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <!-- <add key="client.type" value="view" /> -->
+    <add key="client.type" value="stand:kes" />
+    <add key="client.type.view.0" value="29, 30, 0, 31, 32, 33, 24, 25, 26, 27, 0, 28, 20, 21, 22, 23, 16, 17, 12, 13, 14, 15, 18, 19, 5, 7, 8, 9, 10, 11, 1, 2, 3, 0, 4, 6 " />
+    <add key="client.type.bks.0" value="29, 30, 0, 31, 32, 33, 24, 25, 26, 27, 0, 28, 20, 21, 22, 23, 16, 17, 12, 13, 14, 15, 18, 19, 5, 7, 8, 9, 10, 11, 1, 2, 3, 0, 4, 6 " />
+    <add key="client.type.bks.1" value="31, 32, 26, 3, 2, 1, 4, 6, 16" />
+    <add key="client.type.bks.2" value="31, 32, 26, 18, 19, 17, 4, 6, 16" />
+    <add key="client.type.bks.3" value="31, 32, 26, 3, 2, 1, 4, 6, 16" />
+    <add key="client.type.mks.0" value="29, 30, 0, 31, 32, 33, 24, 25, 26, 27, 0, 28, 20, 21, 22, 23, 16, 17, 12, 13, 14, 15, 18, 19, 5, 7, 8, 9, 10, 11, 1, 2, 3, 0, 4, 6 " />
+    <add key="client.type.mks.1" value="29, 30, 15, 12, 14, 13, 25, 24, 16" />
+    <add key="client.type.mks.2" value="29, 30, 15, 12, 16, 17, 18, 19, 24" />
+    <add key="client.type.mks.3" value="29, 30, 15, 12, 14, 13, 25, 24, 16" />
+    <add key="client.type.kes.0" value="29, 30, 0, 31, 32, 33, 24, 25, 26, 27, 0, 28, 20, 21, 22, 23, 16, 17, 12, 13, 14, 15, 18, 19, 5, 7, 8, 9, 10, 11, 1, 2, 3, 0, 4, 6 " />
+    <add key="client.type.kes.1" value="9, 5, 28, 8, 10, 33, 7, 11, 27" />
+    <add key="client.type.kes.2" value="28, 8, 17, 33, 7, 18, 9, 16, 19" />
+    <add key="client.type.kes.3" value="28, 5, 9, 33, 10, 8, 27, 11, 16" />
   </appSettings>
-  <system.web>
-    <membership defaultProvider="ClientAuthenticationMembershipProvider">
-      <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
-      <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
-      </providers>
-    </roleManager>
-  </system.web>
 </configuration>
