--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="3.1.8" />
       <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.5.1" />
