--- a/SafeClient/SafeClient.csproj
+++ b/SafeClient/SafeClient.csproj
@@ -101,6 +101,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="gui\AboutForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="gui\AboutForm.Designer.cs">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="api\dto\CameraGrid.cs" />
     <Compile Include="api\dto\client\ClientType.cs" />
     <Compile Include="api\dto\client\ClientTypeFactory.cs" />
@@ -352,6 +358,9 @@
     <Compile Include="service\CameraService.cs" />
     <Compile Include="service\DI.cs" />
     <Compile Include="service\StatusReaderService.cs" />
+    <EmbeddedResource Include="gui\AboutForm.resx">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="gui\device\DeviceEditorForm.resx">
       <DependentUpon>DeviceEditorForm.cs</DependentUpon>
     </EmbeddedResource>
