--- a/SafeClient/App.config
+++ b/SafeClient/App.config
@@ -17,7 +17,7 @@
     <add key="alert.before.sec" value="70" />
     <add key="alert.after.sec" value="70" />
     <!-- <add key="client.type" value="view" /> -->
-    <add key="client.type" value="stand:kes" />
+    <add key="client.type" value="stand:bks" />
     <add key="client.type.view.label" value="Стенд Наблюдения" />
     <add key="client.type.view.0" value="29, 30, 0, 31, 32, 33, 24, 25, 26, 27, 0, 28, 20, 21, 22, 23, 16, 17, 12, 13, 14, 15, 18, 19, 5, 7, 8, 9, 10, 11, 1, 2, 3, 0, 4, 6 " />
     <add key="client.type.bks.label" value="Большой Каватационный Стенд (БКС)" />
@@ -30,7 +30,7 @@
     <add key="client.type.mks.1" value="29, 30, 15, 12, 14, 13, 25, 24, 16" />
     <add key="client.type.mks.2" value="29, 30, 15, 12, 16, 17, 18, 19, 24" />
     <add key="client.type.mks.3" value="29, 30, 15, 12, 14, 13, 25, 24, 16" />
-    <add key="client.type.kes.label" value="Каватационно-Энергетический Стенд (КЕС)" />
+    <add key="client.type.kes.label" value="Каватационно-Энергетический Стенд (КЭС)" />
     <add key="client.type.kes.0" value="29, 30, 0, 31, 32, 33, 24, 25, 26, 27, 0, 28, 20, 21, 22, 23, 16, 17, 12, 13, 14, 15, 18, 19, 5, 7, 8, 9, 10, 11, 1, 2, 3, 0, 4, 6 " />
     <add key="client.type.kes.1" value="9, 5, 28, 8, 10, 33, 7, 11, 27" />
     <add key="client.type.kes.2" value="28, 8, 17, 33, 7, 18, 9, 16, 19" />
