add change mode

--- a/SafeClient/App.config
+++ b/SafeClient/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
@@ -16,7 +21,7 @@
     <add key="nvr.detect.time.sec" value="30" />
     <add key="alert.before.sec" value="70" />
     <add key="alert.after.sec" value="70" />
-    <!-- <add key="client.type" value="view" /> -->
+    <!-- <add key="client.type" value="view" />--> 
     <add key="client.type" value="stand:bks" />
     <add key="client.type.view.label" value="Стенд Наблюдения" />
     <add key="client.type.view.0" value="29, 30, 0, 31, 32, 33, 24, 25, 26, 27, 0, 28, 20, 21, 22, 23, 16, 17, 12, 13, 14, 15, 18, 19, 5, 7, 8, 9, 10, 11, 1, 2, 3, 0, 4, 6 " />
@@ -36,4 +41,14 @@
     <add key="client.type.kes.2" value="28, 8, 17, 33, 7, 18, 9, 16, 19" />
     <add key="client.type.kes.3" value="28, 5, 9, 33, 10, 8, 27, 11, 16" />
   </appSettings>
+  <userSettings>
+    <Properties.Settings>
+      <setting name="StandMode" serializeAs="String">
+        <value>Mode1</value>
+      </setting>
+      <setting name="id" serializeAs="String">
+        <value>00000000-0000-0000-0000-000000000000</value>
+      </setting>
+    </Properties.Settings>
+  </userSettings>
 </configuration>
