add vibration config

--- a/SafeClient/App.config
+++ b/SafeClient/App.config
@@ -13,8 +13,8 @@
     <add key="EnableWindowsFormsHighDpiAutoResizing" value="false" />
   </System.Windows.Forms.ApplicationConfigurationSection>
   <appSettings>
-    <!-- <add key="server.url" value="http://localhost:80" /> -->
-    <add key="server.url" value="http://192.168.1.20:80" />
+    <!-- <add key="server.url" value="http://localhost:80" />-->
+    <add key="server.url" value="http://192.168.1.20:80" /> 
     <add key="netsdk.dir" value="dhnetsdk" />
     <add key="nvr.connect.time.ms" value="5000" />
     <add key="nvr.keeplife.time.sec" value="10" />
@@ -24,6 +24,7 @@
     <!-- <add key="client.type" value="view" />--> 
     <add key="client.type" value="stand:bks" />
     <add key="client.type.view.label" value="Стенд Наблюдения" />
+    <add key="client.type.view.device" value="false" />
     <add key="client.type.view.0" value="29, 30, 0, 31, 32, 33, 24, 25, 26, 27, 0, 28, 20, 21, 22, 23, 16, 17, 12, 13, 14, 15, 18, 19, 5, 7, 8, 9, 10, 11, 1, 2, 3, 0, 4, 6 " />
     <add key="client.type.bks.label" value="Большой Каватационный Стенд (БКС)" />
     <add key="client.type.bks.0" value="29, 30, 0, 31, 32, 33, 24, 25, 26, 27, 0, 28, 20, 21, 22, 23, 16, 17, 12, 13, 14, 15, 18, 19, 5, 7, 8, 9, 10, 11, 1, 2, 3, 0, 4, 6 " />
