--- a/SafeClient/App.config
+++ b/SafeClient/App.config
@@ -26,7 +26,7 @@
     <add key="client.type.view.label" value="Стенд Наблюдения" />
     <add key="client.type.view.device" value="false" />
     <add key="client.type.view.0" value="29, 30, 0, 31, 32, 33, 24, 25, 26, 27, 0, 28, 20, 21, 22, 23, 16, 17, 12, 13, 14, 15, 18, 19, 5, 7, 8, 9, 10, 11, 1, 2, 3, 0, 4, 6 " />
-    <add key="client.type.bks.label" value="Большой Каватационный Стенд (БКС)" />
+    <add key="client.type.bks.label" value="БОЛЬШОЙ КАВИТАЦИОННЫЙ СТЕНД (БКС)" />
     <add key="client.type.bks.0" value="29, 30, 0, 31, 32, 33, 24, 25, 26, 27, 0, 28, 20, 21, 22, 23, 16, 17, 12, 13, 14, 15, 18, 19, 5, 7, 8, 9, 10, 11, 1, 2, 3, 0, 4, 6 " />
     <add key="client.type.bks.1" value="31, 32, 26, 3, 2, 1, 4, 6, 16" />
     <add key="client.type.bks.2" value="31, 32, 26, 18, 19, 17, 4, 6, 16" />
