--- a/SafeClient/packages.config
+++ b/SafeClient/packages.config
@@ -11,4 +11,5 @@
   <package id="NLog.Windows.Forms" version="4.3.0" targetFramework="net40" />
   <package id="Onvif.IP.Camera.Viewer" version="11.2.0" targetFramework="net40" />
   <package id="Spring.Rest" version="1.1.1" targetFramework="net40" />
+  <package id="Tulpep.NotificationWindow" version="1.1.37" targetFramework="net40" />
 </packages>
