--- a/SafeClient/App.config
+++ b/SafeClient/App.config
@@ -21,6 +21,7 @@
     <add key="nvr.detect.time.sec" value="30" />
     <add key="alert.before.sec" value="70" />
     <add key="alert.after.sec" value="70" />
+    <!-- <add key="gui.ptz.pin" value="false" />-->
     <!-- <add key="client.type" value="view" />--> 
     <add key="client.type" value="stand:bks" />
     <add key="client.type.view.label" value="Стенд Наблюдения" />
