--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "Allow": "*",
   "Settings": {
-    "DbConnection": "Server=127.0.0.1;Port=5432;Database=monitoring;User Id=postgres;Password=postgres;CommandTimeout=20;"
+    "DbConnection": "Server=127.0.0.1;Port=5432;Database=monitoring;User Id=postgres;Password=postgres;CommandTimeout=20;",
+    "PowerResetTimeout": "2000"
   }
 }
